--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
