--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.20.3",
     "mocha": "^8.0.1",
     "nock": "^12.0.3",
     "supertest": "^4.0.2"
