--- a/package.json
+++ b/package.json
@@ -5,25 +5,15 @@
   "proxy": "http://localhost:4000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "node-fetch": "^2.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "mocha --exit",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "test": "mocha --exit"
   },
   "browserslist": {
     "production": [
@@ -40,7 +30,6 @@
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.20.3",
     "mocha": "^8.0.1",
     "nock": "^12.0.3",
     "supertest": "^4.0.2"
